--- a/appendix.tex
+++ b/appendix.tex
@@ -1,9 +1,12 @@
 \newpage
 \appendix
 \ctexset{section={
-        format={\zihao{4}\heiti\raggedright}
+	format={\zihao{-4}\heiti\raggedright}
 }}
 {\zihao{5}
+\begin{center}
+    \heiti\zihao{4} 附\hspace{1pc}录
+\end{center}
 \section{问题一的 MATLAB 代码}\label{app:1}
 没有
 
