--- a/reference.tex
+++ b/reference.tex
@@ -1,4 +1,4 @@
-\clearpage
+% \clearpage% 图片过多时，导致参考文献中有图片，将此注释去掉
 \phantomsection
 \addcontentsline{toc}{section}{参考文献}
 \begin{thebibliography}{99}
