--- a/figures/daiquanshuzi.tex
+++ b/figures/daiquanshuzi.tex
@@ -1,7 +1,7 @@
 % !TeX program = xelatex
 % !TeX encoding = UTF-8
 \documentclass[UTF8]{standalone}
-\usepackage{tikz,ctex}
+\usepackage{tikz,newtxmath,esint,ctex}
 \usepackage{fontspec}
 \usepackage{libertine}
 \usepackage{pgf} % for the calculation
