--- a/figures/liuchentu.tex
+++ b/figures/liuchentu.tex
@@ -1,7 +1,7 @@
 % !TeX program = xelatex
 % !TeX encoding = UTF-8
 \documentclass[UTF8]{standalone}
-\usepackage{tikz,mathpazo,ctex}
+\usepackage{tikz,mathpazo,ctex,newtxmath,esint}
 \usetikzlibrary{shapes.geometric,shapes.arrows}
 \usepackage{flowchart}
 \begin{document}
