--- a/figures/tab.tex
+++ b/figures/tab.tex
@@ -1,7 +1,7 @@
 % !TeX program = xelatex
 % !TeX encoding = UTF-8
 \documentclass[UTF8]{standalone}
-\usepackage{amsmath,ctex,booktabs,multirow,tabularx}
+\usepackage{amsmath,newtxmath,esint,ctex,booktabs,multirow,tabularx}
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
 \begin{document}
 \begin{tabularx}{\textwidth}{Y}
