--- a/figures/tikz.tex
+++ b/figures/tikz.tex
@@ -1,7 +1,7 @@
 % !TeX program = xelatex
 % !TeX encoding = UTF-8
 \documentclass[UTF8]{standalone}
-\usepackage{amsmath,ctex,tikz}
+\usepackage{amsmath,newtxmath,esint,ctex,tikz}
 \begin{document}
 \begin{tikzpicture}
     \draw (0,0) circle (4);
