增加了伪粗

--- a/example.tex
+++ b/example.tex
@@ -15,7 +15,7 @@
     
     {\heiti\zihao{1}此模板不是官方模板(没有官方模板)，开发者不对此模板作任何的担保，使用者在使用此模板时出现的任何问题、造成的损失都与开发者无关．}
 
-    你甚至可以在 \href{https://github.com/sikouhjw/JXUSTmodeling}{github} 即 \url{https://github.com/sikouhjw/JXUSTmodeling} 上找到最新的模板．
+    你甚至可以在 \href{https://github.com/sikouhjw/JXUSTmodeling}{github} 即 \url{https://github.com/sikouhjw/JXUSTmodeling} 上找到最新的模板。
 
     }{江西理工大学}{数学建模}{\LaTeX{}}{嘤嘤嘤}
     \section{问题的提出}\label{sec:1}
@@ -60,7 +60,7 @@
     \item 行距 1.25 倍；
     \item 题目三号黑体居中；
     \item 一级标题四号黑体居中；
-    \item 其他标题小四宋体加黑(当然我这里只设置了黑体，伪粗不好看而且不会调)；
+    \item 其他标题小四宋体加粗；
     \item 正文小四宋体；
     \item 图表标题 5 号黑体；
     \item 参考文献引用放右上角；
