--- a/main.tex
+++ b/main.tex
@@ -1,33 +1,38 @@
 % !TeX program = xelatex
 % !TeX encoding = UTF-8
 \documentclass{JXUSTmodeling}
-
+\biaoti{标题}
+\keyword{一个；两个；三个；四个}
 \begin{document}
-    \biaoti{标题}{
-	占位
+\begin{abstract}
+  文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
+\end{abstract}
+\section{问题的提出}\label{sec:1}
+\subsection{问题的背景}\label{sub:1.1}
+\subsection{已知的条件}\label{sub:1.2}
+\subsection{问题的提出}\label{sub:1.3}
 
-	}{占位}{占位}{占位}{占位}
-    \section{问题的提出}\label{sec:1}
-    \subsection{问题的背景}\label{sub:1.1}
-    \subsection{已知的条件}\label{sub:1.2}
-    \subsection{问题的提出}\label{sub:1.3}
+\section{问题的分析}\label{sec:2}
+\subsection{问题的整体分析}\label{sub:2.1}
+\subsection{问题一的分析}\label{sub:2.2}
+\subsection{问题二的分析}\label{sub:2.3}
+\subsection{问题三的分析}\label{sub:2.4}
 
-    \section{问题的分析}\label{sec:2}
-    \subsection{问题的整体分析}\label{sub:2.1}
-    \subsection{问题一的分析}\label{sub:2.2}
-    \subsection{问题二的分析}\label{sub:2.3}
-    \subsection{问题三的分析}\label{sub:2.4}
+\section{模型的假设}\label{sec:3}
 
-    \section{模型的假设}\label{sec:3}
+\section{符号说明}\label{sec:4}
 
-    \section{符号说明}\label{sec:4}
+\section{模型的建立与求解}\label{sec:5}
 
-    \section{模型的建立与求解}\label{sec:5}
+\section{模型的检验}\label{sec:6}
 
-    \section{模型的检验}\label{sec:6}
+\section{模型的评价及推广}\label{sec:7}
 
-    \section{模型的评价及推广}\label{sec:7}
+\begin{thebibliography}{99}
+  \bibitem{label}参考文献
+\end{thebibliography}
 
-    \input{reference.tex}
-    \input{appendix.tex}
+\begin{appendixx}
+  \section{问题一的 MATLAB 代码}
+\end{appendixx}
 \end{document}
